FIX scrollbar on top of chat header

--- a/public/less/trp3Chat.less
+++ b/public/less/trp3Chat.less
@@ -135,6 +135,7 @@ a.issue:hover {
 // }
 
 .trpChatContainer {
+  -webkit-transform: translate3d(0, 0, 0); // scrollbar to respect z-index
   box-sizing: border-box;
   text-align: center;
   display: inline-block;
